Update style.css for mobile devices

--- a/style.css
+++ b/style.css
@@ -89,6 +89,29 @@ button:hover{
     background-color: blue;
 }
 
+@media (max-width: 480px) {
+    .container {
+        padding: 2em 1.5em;
+        gap: 1.5em;
+    }
 
+    .title {
+        font-size: 1.8em;
+    }
+
+    .timer {
+        font-size: 4em;
+    }
+
+    button {
+        font-size: 1.2em;
+        padding: 0.4em 0.8em;
+    }
+
+    .buttons-wrapper {
+        gap: 0.7em;
+        flex-direction: column;
+    }
+}
 
 
